hard-gists/3760670/run.log
=== Docker Run Log for 3760670 ===
Started at: Mi 29. Okt 13:59:16 CET 2025

[2025-10-29 13:59:17] START: Running container for 3760670
[2025-10-29 13:59:17] SUCCESS: Container d8b6aaa1302db77e8a3236f36c2395812972df97f7cd825de4376a046ad23287 started for 3760670
=== Container logs for 3760670 ===
  File "/snippet.py", line 17
    print "%s=%s" % (key, value)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3760670 ===
[2025-10-29 13:59:19] INFO: Container d8b6aaa1302db77e8a3236f36c2395812972df97f7cd825de4376a046ad23287 has stopped
